2006-05-22  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): use
	'svnversion' instead of grepping the output of 'svn info', much
	simpler and avoids CR/LF problems on windows. Thanks to Olivier
	Bonnet for the suggestion.

	* buildbot/interfaces.py (IChangeSource): methods in Interfaces
	aren't supposed to have 'self' in their argument list

2006-05-21  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (ShellCommand.start): make
	testInterpolate pass. I was passing the uninterpolated command to
	the RemoteShellCommand constructor
	(ShellCommand._interpolateProperties): oops, handle non-list
	commands (i.e. strings with multiple words separated by spaces in
	them) properly, instead of forgetting about them.

	* buildbot/test/test_properties.py (Run.testInterpolate): new test
	to actually try to use build properties in a real build. This test
	fails.
	* buildbot/test/runutils.py (RunMixin.requestBuild): utility methods
	to start and evaluate builds

	* buildbot/test/test__versions.py: add a pseudo-test to record
	what version of Twisted/Python/Buildbot are running. This should
	show up at the beginning of _trial_tmp/test.log, and exists to help
	debug other problems.

	* buildbot/status/html.py (Waterfall): add 'robots_txt=' argument,
	a filename to be served as 'robots.txt' to discourage web spiders.
	Adapted from a patch by Tobi Vollebregt, thanks!
	* buildbot/test/test_web.py (Waterfall._test_waterfall_5): test it
	(Waterfall.test_waterfall): tweak the way that filenames are put
	into the config file, to accomodate windows pathnames better.

	* docs/buildbot.texinfo (HTML Waterfall): document it

	* buildbot/process/process_twisted.py
	(QuickTwistedBuildFactory.__init__): recent versions of Twisted
	changed the build process. The new setup.py no longer takes the
	'all' argument.
	(FullTwistedBuildFactory.__init__): same
	(TwistedReactorsBuildFactory.__init__): same
